Removed 1000 games runner from start to an explain button

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./main.css">
 </head>
 <body>
+    <div id="batonExplain"><button id="explain">Объяснить</button></div>
     <button id="baton1"></button>
     <button id="baton2"></button>
     <button id="baton3"></button>
