--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>The doors</title>
     <script src="./main.js"></script>
     <link rel="stylesheet" href="./main.css">
+    <link rel="shortcut icon" href="./favicon.png" type="image/png">
 </head>
 <body>
     <div id="batonExplain"><button id="explain">Объяснить</button></div>
