Some CSS improvment

--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
     <h1 class="header">Try your luck!</h1>
 
     <div class="btn">
-    <button id="baton1" class="door"></button><button id="baton2" class="door"></button><button id="baton3" class="door"></button>
+    <button id="baton1" class="door"></button>
+    <button id="baton2" class="door"></button>
+    <button id="baton3" class="door"></button>
+    </div>
+    <div class="nav">
     <button id="start">Начать игру!</button>
     <button id="explain">Объяснить</button>
     </div>
